<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="450dp"
    android:orientation="vertical"
    android:id="@+id/months_cardview">

    <TextView
        android:id="@+id/lg_cv_hdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/cv_hdr_txt"
        android:textAlignment="center"
        android:textSize="20dp" />

    <RelativeLayout
        android:id="@+id/prog_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lg_cv_hdr">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/jan_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/jan_prg_lbl" />

                <ProgressBar
                    android:id="@+id/prog_jan"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/jan_tm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/trips_miles_txt"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/feb_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/feb_prg_lbl" />

                <ProgressBar
                    android:id="@+id/prog_feb"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true" />

                <TextView
                    android:id="@+id/feb_tm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/trips_miles_txt"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mar_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/mar_prg_lbl" />

                <ProgressBar
                    android:id="@+id/prog_mar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/mar_tm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/trips_miles_txt"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/apr_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/apr_prg_lbl" />

                <ProgressBar
                    android:id="@+id/prog_apr"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true" />

                <TextView
                    android:id="@+id/apr_tm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/trips_miles_txt"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/may_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/may_prg_lbl" />

                <ProgressBar
                    android:id="@+id/prog_may"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/may_tm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/trips_miles_txt"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/jun_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/jun_prg_lbl" />

                <ProgressBar
                    android:id="@+id/prog_jun"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/jun_tm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/trips_miles_txt"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/jul_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/jul_prg_lbl" />

                <ProgressBar
                    android:id="@+id/prog_jul"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true" />

                <TextView
                    android:id="@+id/jul_tm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/trips_miles_txt"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/aug_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/aug_prg_lbl" />

                <ProgressBar
                    android:id="@+id/prog_aug"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true" />

                <TextView
                    android:id="@+id/aug_tm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/trips_miles_txt"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sep_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/sep_prg_lbl" />

                <ProgressBar
                    android:id="@+id/prog_sep"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/sep_tm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/trips_miles_txt"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/oct_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/oct_prg_lbl" />

                <ProgressBar
                    android:id="@+id/prog_oct"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true" />

                <TextView
                    android:id="@+id/oct_tm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/trips_miles_txt"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/nov_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/nov_prg_lbl" />

                <ProgressBar
                    android:id="@+id/prog_nov"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/nov_tm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/trips_miles_txt"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/dec_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/dec_prg_lbl" />

                <ProgressBar
                    android:id="@+id/prog_dec"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true" />

                <TextView
                    android:id="@+id/dec_tm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/trips_miles_txt"/>


            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>